--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "connectedfridgebackend",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
+    "cfenv": "^1.0.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
